# spraywall

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.sam.yml  docker-compose.yml
.claude/commands/: pr-feedback-plan.md
app/: app.json  metro.config.js  package-lock.json  package.json
app/src/app/: _layout.tsx  index.tsx  login.tsx  register.tsx
app/src/app/(app)/: _layout.tsx  logbook.tsx  settings.tsx
app/src/components/: GradePicker.tsx  HoldOverlay.tsx  SwipeToDelete.tsx  SyncStatusBar.tsx  ZoomableView.tsx
app/src/lib/: grades.ts
app/src/lib/api/: client.ts  fetch.ts  schema.d.ts  types.ts
infra/minio/: bootstrap.sh
infra/nginx/: nginx.conf
infra/postgres/: init.sql
server/: .air.toml  .golangci.yml  Dockerfile  go.mod  go.sum  sqlc.yaml
server/cmd/server/: main.go
server/db/migrations/: 0001_init.sql  0002_refresh_tokens.sql  0003_gyms_walls.sql  0004_holds.sql  0005_routes.sql  0006_invites.sql  0007_hold_roles.sql  0008_draft_routes.sql  0009_status_check.sql  0010_detection_jobs_cascade.sql
server/db/queries/: gyms.sql  invites.sql  routes.sql  users.sql  walls.sql
server/internal/invite/: handler.go
server/internal/middleware/: ratelimit.go
server/internal/route/: handler.go
server/internal/shared/: pghelpers.go
server/internal/storage/: minio.go
server/internal/user/: handler.go  helpers.go  middleware.go
server/internal/wall/: handler.go
server/openapi/: openapi.yaml
worker/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
worker/detection/: infer.py  segment.py  storage.py
(+18 files in other folders)
