[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spraywall-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.1",
    "boto3>=1.34",
    "python-dotenv>=1.0",
    "ultralytics>=8.1",
    "huggingface_hub>=0.20",
]
